cloud/eks/self-managed/api-gw/consul-api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
# The Gateway is the main infrastructure resource that links API gateway components.
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul-api-gateway
  # Configures the listener that is bound to the gateway's address.
  listeners:
    # Defines the listener protocol (HTTP, HTTPS, or TCP)
  - protocol: HTTPS
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      # Defines the certificate to use for the HTTPS listener.
      certificateRefs:
        - name: consul-server-cert
